--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -8,12 +8,30 @@ body {
 }
 
 .generator {
+    height:100vh;
+    width:100%;
+    display: flex;
+    position: absolute;
+    text-align: center;
+    background-color: gainsboro;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    top: 0;
+    bottom: 0;
+}
+.navn {
     display: flex;
     position: relative;
     justify-content: center;
     text-align: center;
-    bottom:0px;
-    background-color: royalblue;
     flex-direction: column;
-    align-items: center;
+    padding: 5px;
+    border-bottom: 2px rgba(0, 0, 0, 0.544) dotted;
+}
+textarea {
+    margin: 10px;
+    resize: none;
+    height: 100px;
+    width: 350px;
 }
